# bddreporting

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
bddreporting/: __init__.py  after_feature.py  after_scenario.py  after_step.py  before_feature.py  before_scenario.py  before_step.py  config.py  report.py  utils.py
bddreporting/data/: schema.json  settings.json
bddreporting/formats/: custom-xml.py
